--- a/quiver-groups.cabal
+++ b/quiver-groups.cabal
@@ -23,5 +23,6 @@ library
   -- other-modules:
   build-depends:       base >=4.8 && <4.9
                      , quiver >= 1.1.3 && < 1.2
+                     , dlist >= 0.5 && < 0.8
   hs-source-dirs:      src
   default-language:    Haskell2010
