--- a/quiver-groups.cabal
+++ b/quiver-groups.cabal
@@ -26,3 +26,21 @@ library
                      , dlist >= 0.5 && < 0.8
   hs-source-dirs:      src
   default-language:    Haskell2010
+
+  ghc-options:         -Wall
+
+test-suite properties
+  type:                exitcode-stdio-1.0
+  main-is:             PropTests.hs
+  build-depends:       quiver-groups
+                     , base
+                     , quiver
+
+                     , QuickCheck >= 2.5 && < 2.9
+                       -- Just to make it nicer to write
+                     , hspec >= 2.1 && < 2.3
+  hs-source-dirs:      test
+  default-language:    Haskell2010
+
+  ghc-options:         -Wall
+  ghc-prof-options:    -prof -auto
