Allow building and testing on GHC 8.*

--- a/quiver-groups.cabal
+++ b/quiver-groups.cabal
@@ -13,7 +13,7 @@ extra-source-files:  README.md
                    , stack.yaml
 cabal-version:       >=1.10
 
-tested-with:   GHC == 7.10.2, GHC == 7.11.*
+tested-with:   GHC == 7.10.2, GHC == 8.0.1, GHC == 8.1.*
 
 source-repository head
     type:         git
@@ -22,7 +22,7 @@ source-repository head
 library
   exposed-modules:     Control.Quiver.Group
   -- other-modules:
-  build-depends:       base >=4.8 && <4.9
+  build-depends:       base >=4.8 && <4.10
                      , quiver >= 1.1.3 && < 1.2
                      , dlist >= 0.5 && < 0.8
   hs-source-dirs:      src
